make 2 tests in Test3

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test1": "mocha test/SeleniumChromeTest.js --timeout 0",
     "test2": "mocha test/SeleniumChromeTest2.js --timeout 0",
+    "test3": "mocha test/SeleniumChromeTest3.js --timeout 0",
     "test2-brk": "mocha --inspect-brk test/SeleniumChromeTest2.js --timeout 0"
   },
   "author": "",
