--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "testjs": "mocha test/test.js",
     "test1": "mocha test/SeleniumChromeTest.js --timeout 0",
     "test2": "mocha test/SeleniumChromeTest2.js --timeout 0",
     "test3": "mocha test/SeleniumChromeTest3.js --timeout 0",
