--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
     "chromedriver": "^80.0.0",
     "mocha": "^7.1.1",
     "selenium-webdriver": "^4.0.0-alpha.7"
