--- a/selenium/selenium_web_1/package.json
+++ b/selenium/selenium_web_1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test1": "mocha test/SeleniumChromeTest.js --timeout 0"
   },
   "author": "",
   "license": "ISC",
