--- a/selenium/selenium_web_1/package.json
+++ b/selenium/selenium_web_1/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test1": "mocha test/SeleniumChromeTest.js --timeout 0"
+    "test1": "mocha test/SeleniumChromeTest.js --timeout 0",
+    "lastName": "mocha test/lastName.js --timeout 0",
+    "lastName-brk": "mocha --inspect-brk test/lastName.js --timeout 0"
   },
   "author": "",
   "license": "ISC",
